--- a/DvachBrowser3/Views/CatalogPage.xaml
+++ b/DvachBrowser3/Views/CatalogPage.xaml
@@ -31,8 +31,6 @@
                         <AdaptiveTrigger MinWindowWidth="{StaticResource NarrowMinWidth}" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="ThisPage.TileWidth" Value="105" />
-                        <Setter Target="PostPreview.PopupMargin" Value="5" />
                         <Setter Target="PostPreviewScroll.Padding" Value="{StaticResource CleanListPaddingNarrow}" />
                     </VisualState.Setters>
                 </VisualState>
@@ -41,8 +39,6 @@
                         <AdaptiveTrigger MinWindowWidth="{StaticResource NormalMinWidth}" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="ThisPage.TileWidth" Value="160" />
-                        <Setter Target="PostPreview.PopupMargin" Value="24, 5, 24, 5" />
                         <Setter Target="PostPreviewScroll.Padding" Value="{StaticResource CleanListPadding}" />
                     </VisualState.Setters>
                 </VisualState>
@@ -75,18 +71,18 @@
         <GridView x:Name="MainList" Grid.Row="3" SelectionMode="None" ItemsSource="{x:Bind FilteredPosts.Posts, Mode=OneWay}" Margin="4, 4, 4, 0"
                   >
             <GridView.Header>
-                <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay}" FontWeight="SemiBold" FontSize="18" MaxLines="2" Margin="0, 0, 0, 10" HorizontalAlignment="Center" TextWrapping="Wrap" />
+                <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay}" FontWeight="SemiBold" FontSize="{x:Bind ViewModel.StyleManager.Text.TitleFontSize, Mode=OneWay}" MaxLines="2" Margin="0, 0, 0, 10" HorizontalAlignment="Center" TextWrapping="Wrap" />
             </GridView.Header>
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="vm:IPostViewModel">
-                    <Grid Width="{Binding ElementName=ThisPage, Path=TileWidth}" Margin="0, 0, 0, 7.5" ToolTipService.ToolTip="{x:Bind Subject}" Tapped="CatalogElement_OnTapped"
+                    <Grid Width="{x:Bind StyleManager.Tiles.CatalogTileWidth, Mode=OneWay}" Margin="0, 0, 0, 7.5" ToolTipService.ToolTip="{x:Bind Subject}" Tapped="CatalogElement_OnTapped"
                           Tag="{x:Bind Mode=OneWay}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" FontSize="11.5" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" HorizontalAlignment="Left" Margin="2" Text="{x:Bind Subject, Mode=OneWay}" />
-                        <pa:TileImage Grid.Row="1" ViewModel="{x:Bind Media.PrimaryFile.ThumbnailImage, Mode=OneWay}" Height="90" HorizontalAlignment="Stretch" />
+                        <TextBlock Grid.Row="0" FontSize="{x:Bind StyleManager.Text.SmallFontSize, Mode=OneWay}" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" HorizontalAlignment="Left" Margin="2" Text="{x:Bind Subject, Mode=OneWay}" />
+                        <pa:TileImage Grid.Row="1" ViewModel="{x:Bind Media.PrimaryFile.ThumbnailImage, Mode=OneWay}" Height="{x:Bind StyleManager.Tiles.CatalogTileHeight, Mode=OneWay}" HorizontalAlignment="Stretch" />
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
