--- a/DvachBrowser3/Views/Partial/ProgressIndicatorControl.xaml
+++ b/DvachBrowser3/Views/Partial/ProgressIndicatorControl.xaml
@@ -16,7 +16,7 @@
 
     <StackPanel Visibility="{x:Bind IsVisible, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}">
         <TextBlock TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Visibility="{x:Bind IsShowMessage, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}"
-                   Text="{x:Bind Message, Mode=OneWay}" FontSize="14" Margin="2"/>
+                   Text="{x:Bind Message, Mode=OneWay}" FontSize="{x:Bind ViewModel.StyleManager.Text.PostFontSize, Mode=OneWay}" Margin="2"/>
         <ProgressBar IsIndeterminate="{x:Bind IsIndeterminate, Mode=OneWay}" Minimum="0" Maximum="100" Margin="2" Value="{x:Bind Progress, Mode=OneWay}" />
     </StackPanel>
 </UserControl>
