--- a/DvachBrowser3/Views/BoardPage.xaml
+++ b/DvachBrowser3/Views/BoardPage.xaml
@@ -12,7 +12,7 @@
     xmlns:localBehaviors="using:DvachBrowser3.Behaviors"
     xmlns:controls="using:Template10.Controls"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    mc:Ignorable="d">
+    mc:Ignorable="d" KeyDown="BoardPage_OnKeyDown">
 
     <ps:PageServices.Services>
         <ps:PageServiceCollection>
