--- a/DvachBrowser3/Views/CatalogPage.xaml
+++ b/DvachBrowser3/Views/CatalogPage.xaml
@@ -13,7 +13,7 @@
     xmlns:controls="using:Template10.Controls"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    mc:Ignorable="d" x:Name="ThisPage">
+    mc:Ignorable="d" x:Name="ThisPage" KeyDown="CatalogPage_OnKeyDown">
 
     <ps:PageServices.Services>
         <ps:PageServiceCollection>
