--- a/DvachBrowser3/Views/ThreadPage.xaml
+++ b/DvachBrowser3/Views/ThreadPage.xaml
@@ -13,7 +13,7 @@
     xmlns:localBehaviors="using:DvachBrowser3.Behaviors"
     xmlns:controls="using:Template10.Controls"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    x:Name="ThisPage">
+    x:Name="ThisPage" KeyDown="ThreadPage_OnKeyDown">
 
     <ps:PageServices.Services>
         <ps:PageServiceCollection>
@@ -66,7 +66,8 @@
         <pa:ContentPopup Grid.Row="2" x:Name="SinglePostViewPopup" IsContentVisibleChanged="ContentPopup_OnIsContentVisibleChanged">
             <pa:ContentPopup.ViewContent>
                 <pa:SinglePostCollectionView ViewModel="{x:Bind ViewModel, Mode=OneWay}" MaxLines="0" ShowCounter="True" ShowPreviewSeparator="False" ShowFullPostButton="False"
-                               x:Name="SingleList" SelectedItem="{x:Bind SingleSelectedItem, Mode=TwoWay}"/>
+                                             x:Name="SingleList" SelectedItem="{x:Bind SingleSelectedItem, Mode=TwoWay}"
+                                             BackButtonClick="SingleList_OnBackButtonClick" GoButtonClick="SingleList_OnGoButtonClick"/>
             </pa:ContentPopup.ViewContent>
         </pa:ContentPopup>
     </Grid>
