--- a/DvachBrowser3/Views/Partial/SinglePostCollectionView.xaml
+++ b/DvachBrowser3/Views/Partial/SinglePostCollectionView.xaml
@@ -29,7 +29,7 @@
                         <SymbolIcon Symbol="Back" />
                     </Viewbox>
                 </Button>
-                <Button Grid.Column="2" Margin="3, 0, 3, 0" Click="GoButton_OnClick" Padding="3" ToolTipService.ToolTip="Открыть в общем списке">
+                <Button Grid.Column="2" Margin="3, 0, 3, 0" Click="GoButton_OnClick" Padding="3" ToolTipService.ToolTip="Показать в общем списке">
                     <Viewbox Height="{x:Bind StyleManager.Icons.HeaderIconSize, Mode=OneWay}" Width="{x:Bind StyleManager.Icons.HeaderIconSize, Mode=OneWay}">
                         <SymbolIcon Symbol="Go" />
                     </Viewbox>
